# ld26-minimalism

./: .gitignore  CMakeLists.txt  index.html  params.json
cmake/: Toolchain-cross-mingw32-linux.cmake
data/: level1.txt  level2.txt  level3.txt  level4.txt
src/: AboveTile.cpp  AboveTile.h  BackgroundA.cpp  BackgroundA.h  BackgroundB.cpp  BackgroundB.h  CMakeLists.txt  Camera.cpp  Camera.h  EndGameBackground.cpp  EndGameBackground.h  EndGameGate.cpp  EndGameGate.h  Entity.cpp  Entity.h  FlashText.cpp  FlashText.h  ISwitchable.h  LevelLoader.cpp  LevelLoader.h  NextLevel.cpp  NextLevel.h  Player.cpp  Player.h  SmallTile.cpp  SmallTile.h  Spring.cpp  Spring.h  Switch.cpp  Switch.h  SwitchedTile.cpp  SwitchedTile.h  Tile.cpp  Tile.h  main.cpp  main.h  util.cpp  util.h
